// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Rename suggestion change style when selected 1`] = `
<div
  aria-selected={true}
  className="root"
>
  <p
    aria-selected={true}
    className="text"
  >
    Rename
  </p>
  <label
    aria-selected={true}
    className="labelContainer"
  >
    <input
      className="input"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;

exports[`Project Rename suggestion do not render with other suggestion 1`] = `
<div
  aria-selected={false}
  className="root"
>
  <p
    aria-selected={false}
    className="text"
  >
    Rename
  </p>
  <label
    aria-selected={false}
    className="labelContainer"
  >
    <input
      className="input"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;

exports[`Project Rename suggestion render with rename suggestion 1`] = `
<div
  aria-selected={false}
  className="root"
>
  <p
    aria-selected={false}
    className="text"
  >
    Rename
  </p>
  <label
    aria-selected={false}
    className="labelContainer"
  >
    <input
      className="input"
      onChange={[Function]}
      type="text"
      value="node"
    />
  </label>
</div>
`;
